--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/css.css">
     <title>Hello Git part 2!!!</title>
+// Комментарий типо!
 </head>
 <body>
     <p> Git + GitHub</p>
