--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/css.css">
     <title>Hello Git part 2!!!</title>
 // Комментарий типо!
+// Commit in new branch!!!
 </head>
 <body>
     <p> Git + GitHub</p>
